syntax = "proto3";

package auth.v1;

option go_package = "erp.localhost/internal/infra/proto/auth/v1;authv1";

import "infra/v1/infra.proto";
import "google/protobuf/timestamp.proto";

// =============================================================================
// Main Tenant Data Message
// =============================================================================

message TenantData {
    string id = 1;
    string name = 2;
    string status = 3;  // active, suspended, inactive, trial
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    string created_by = 6;
}

// =============================================================================
// Create/Update Messages
// =============================================================================

message CreateTenantData {
    string name = 1;
    string status = 2;
    string created_by = 3;
    string admin_email = 4;      // NEW - Email for initial admin user
    string admin_password = 5;    // NEW - Password for initial admin user
}

message UpdateTenantData {
    string id = 1;
    optional string name = 2;
    optional string status = 3;
}

// =============================================================================
// Response Messages
// =============================================================================

message TenantResponse {
    TenantData tenant = 1;
}

message TenantsResponse {
    repeated TenantData tenants = 1;
    infra.v1.PaginationResponse pagination = 2;
}

message CreateTenantRequest {
    infra.v1.UserIdentifier identifier = 1;
    CreateTenantData tenant = 2;
}

message CreateTenantResponse {
    string tenant_id = 1;
}

message GetTenantRequest {
    infra.v1.UserIdentifier identifier = 1;
    oneof tenant {
        string tenant_id = 2;
        string name = 3;
    }
}

message GetTenantsRequest {
    infra.v1.UserIdentifier identifier = 1;
    optional string status = 2;  // Filter by status
    infra.v1.PaginationRequest pagination = 3;
}

message UpdateTenantRequest {
    infra.v1.UserIdentifier identifier = 1;
    UpdateTenantData tenant = 2;
}

message UpdateTenantResponse {
    bool updated = 1;
}

message DeleteTenantRequest {
    infra.v1.UserIdentifier identifier = 1;
    string tenant_id = 2;
}

message DeleteTenantResponse {
    bool deleted = 1;
}

// =============================================================================
// Service Definition
// =============================================================================

service TenantService {
    // CRUD
    rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse);
    rpc GetTenant(GetTenantRequest) returns (TenantResponse);
    rpc GetTenants(GetTenantsRequest) returns (TenantsResponse);
    rpc UpdateTenant(UpdateTenantRequest) returns (UpdateTenantResponse);
    rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse);
} 